[package]
name = "oauth2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Florin Lipan <florinlipan@gmail.com>", "David A. Ramos <ramos@cs.stanford.edu>"]
version = "4.4.1"
license = "MIT OR Apache-2.0"
description = "An extensible, strongly-typed implementation of OAuth2"
repository = "https://github.com/ramosbugs/oauth2-rs"
edition = "2018"
readme = "README.md"

# [package.metadata.docs.rs]
# all-features = true

[badges]
maintenance = { status = "actively-developed" }

# [features]
# default = ["reqwest", "rustls-tls"]
# pkce-plain = []
# native-tls = ["reqwest/native-tls"]
# rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx.git"}
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git"}
http = { git = "https://github.com/mesalock-linux/http-sgx.git"}
rand = { git = "https://github.com/mesalock-linux/rand-sgx.git"}
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git"}
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git"}
url = { git = "https://github.com/mesalock-linux/rust-url-sgx.git" }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx.git" }

# sha2 = "0.10"
# reqwest = { version = "0.11", optional = true, default-features = false, features = ["blocking"] }
# ureq = { version = "2", optional = true }
# serde_path_to_error = "0.1.2"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom = { version = "0.2", features = ["js"] }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# curl = { version = "0.4.0", optional = true }

# [dev-dependencies]
# hex = "0.4"
# hmac = "0.12"
# uuid = { version = "0.8", features = ["v4"] }
# anyhow = "1.0"
# tokio = { version = "1.0", features = ["full"] }
# async-std = "1.6.3"
